--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="./js/menuScene.js"></script>
     <script src="./js/gameScene.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/hipotesisScene.js"></script>
 </head>
 <body>
     <div id="game-container"></div>
